--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,4 +1,7 @@
 {
+  "code-runner.executorMap": {
+    "typescript": "node --require ts-node/register"
+  },
   "debug.console.historySuggestions": false,
   "editor.codeActionsOnSave": {
     "source.fixAll": true,
