--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -6,7 +6,7 @@
   },
   "editor.find.globalFindClipboard": true,
   "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
+  "editor.formatOnSave": false,
   "editor.formatOnType": true,
   "editor.minimap.enabled": false,
   "editor.quickSuggestions": {
@@ -36,12 +36,21 @@
   "search.quickOpen.includeHistory": false,
   "search.smartCase": true,
   "security.workspace.trust.enabled": false,
+  "typescript.format.semicolons": "insert",
+  "typescript.inlayHints.enumMemberValues.enabled": true,
+  "typescript.inlayHints.functionLikeReturnTypes.enabled": true,
+  "typescript.inlayHints.parameterNames.enabled": "all",
+  "typescript.inlayHints.parameterTypes.enabled": true,
+  "typescript.inlayHints.propertyDeclarationTypes.enabled": true,
+  "typescript.inlayHints.variableTypes.enabled": true,
   "typescript.updateImportsOnFileMove.enabled": "always",
+  "typescript.suggest.completeFunctionCalls": true,
   "window.nativeTabs": true,
   "window.restoreWindows": "none",
   "workbench.editor.closeOnFileDelete": true,
   "workbench.editor.restoreViewState": false,
   "workbench.settings.editor": "json",
   "workbench.settings.openDefaultSettings": true,
-  "workbench.startupEditor": "none"
+  "workbench.startupEditor": "none",
+  "debug.onTaskErrors": "abort"
 }
