--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "debug.console.historySuggestions": false,
+  "code-runner.executorMap": {
+    "typescript": "node -r ts-node/register",
+  },
   "editor.codeActionsOnSave": {
     "source.fixAll": true,
     "source.organizeImports": true,
@@ -24,10 +27,13 @@
   "files.autoGuessEncoding": true,
   "files.hotExit": "off",
   "files.trimTrailingWhitespace": true,
+  "git.allowForcePush": true,
   "git.autofetch": true,
   "git.autoStash": true,
   "git.confirmSync": false,
   "git.fetchOnPull": true,
+  "git.pruneOnFetch": true,
+  "git.rebaseWhenSync": true,
   "html.format.endWithNewline": false,
   "html.format.preserveNewLines": false,
   "javascript.inlayHints.enumMemberValues.enabled": true,
