--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -26,6 +26,7 @@
   "explorer.confirmDragAndDrop": false,
   "extensions.ignoreRecommendations": true,
   "files.autoGuessEncoding": true,
+  "files.autoSave": "onWindowChange",
   "files.hotExit": "off",
   "files.trimTrailingWhitespace": true,
   "git.allowForcePush": true,
@@ -35,7 +36,6 @@
   "git.fetchOnPull": true,
   "git.pruneOnFetch": true,
   "git.rebaseWhenSync": true,
-  "html.format.endWithNewline": false,
   "html.format.preserveNewLines": false,
   "javascript.inlayHints.enumMemberValues.enabled": true,
   "javascript.inlayHints.functionLikeReturnTypes.enabled": true,
