--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -51,17 +51,14 @@
     dnoa = !git diff --name-only HEAD~ | awk -F/ '{print $NF}' | cut -d. -f1 | sort
     dns = diff --name-status
     dsd = diff --stat develop
-    dt = difftool
+    empty = commit --allow-empty --allow-empty-message --no-edit
     lp = log --patch -- # takes <file> and shows the change history of the file.
     m = merge --no-edit
     ma = merge --abort
-    md = merge --no-edit develop
-    mt = mergetool
     pf = push --force
     r = rebase
     ra = rebase --abort
     rc = rebase --continue
-    rd = !git fetch origin develop:develop && git rebase develop
     rgu = remote get-url origin
     ri = rebase --interactive
     rir = rebase --interactive --root
