--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -79,8 +79,7 @@
     # stash-related
     pop = stash pop
     st = stash --include-untracked
-    sta = stash apply
-    stc = stash clear
-    std = stash drop
+    clear = stash clear
+    drop = stash drop
     stl = stash list
     sts = stash show
