--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -60,7 +60,7 @@
     r = rebase
     ra = rebase --abort
     rc = rebase --continue
-    rd = !git fetch --prune --prune-tags && git rebase develop
+    rd = !git pull origin develop && git rebase develop
     rgu = remote get-url origin
     ri = rebase --interactive
     rir = rebase --interactive --root
