--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,10 +1,11 @@
 [user]
-    name = Tatsuya Fujisaki
     email = 1838962+tatsuyafujisaki@users.noreply.github.com
+    name = Tatsuya Fujisaki
 [core]
-    excludesfile = ~/.gitignore
-    editor = code -w
     autocrlf = input # Set "input" on Linux/Mac. Set "true" on Windows. https://git-scm.com/book/en/v2/Customizing-Git-Git-Configuration
+    editor = code -w
+    excludesFile = ~/.gitignore
+    ignoreCase = false # makes it possible to 
     # whitespace = cr-at-eol # prevents "git diff" on Windows from showing "^M".
 [credential]
     helper = osxkeychain # sets "osxkeychain" on Mac. Set "wincred" on Windows, instead.
@@ -17,8 +18,8 @@
 [pull]
     rebase = true
 [rebase]
-    autosquash = true
-    autostash = true
+    autoSquash = true
+    autoStash = true
 [diff]
     tool = vscode
 [difftool]
