--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -68,7 +68,8 @@
     rgu = remote get-url origin
     ri = rebase --interactive
     rir = rebase --interactive --root
-    rs = reset HEAD~ --hard
+    rs = reset HEAD~
+    rsh = reset HEAD~ --hard
     rsk = rebase --skip
     sno = show --name-only
     sns = show --name-status
