--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,6 +1,6 @@
 // Put me as ~/Library/Application Support/Code/User/settings.json
 {
-  "dart.flutterSdkPath": "~/.asdf/installs/flutter/3.13.6-stable",
+  "dart.flutterSdkPath": "~/.asdf/installs/flutter/3.13.6-stable", // Alternatively, set the FLUTTER_ROOT environment variable.
   "debug.console.historySuggestions": false,
   "editor.codeActionsOnSave": {
     "source.fixAll": true
