--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -6,7 +6,7 @@
   "dart.hotReloadOnSave": "allIfDirty",
   "dart.renameFilesWithClasses": "always",
   "debug.console.historySuggestions": false,
-  "debug.toolBarLocation": "docked",
+  "debug.toolBarLocation": "commandCenter",
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
@@ -68,7 +68,8 @@
   "typescript.inlayHints.variableTypes.enabled": true,
   "typescript.updateImportsOnFileMove.enabled": "always",
   "typescript.suggest.completeFunctionCalls": true,
-  "window.nativeTabs": true,
+  // Uncomment when https://github.com/microsoft/vscode/issues/172464 is resolved.
+  // "window.nativeTabs": true,
   "window.restoreWindows": "none",
   "workbench.editor.closeOnFileDelete": true,
   "workbench.editor.restoreViewState": false,
