--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -31,6 +31,10 @@
   "extensions.ignoreRecommendations": true,
   "files.autoGuessEncoding": true,
   "files.autoSave": "onFocusChange",
+  "files.exclude": {
+    "**/*.freezed.dart": true,
+    "**/*.g.dart": true
+  },
   "files.hotExit": "off",
   "files.trimTrailingWhitespace": true,
   "git.allowForcePush": true,
