--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -40,7 +40,7 @@
     b = branch
     bc = branch --show-current
     cam = commit --all --amend --no-verify -m # stages all changes and replaces the previous commit with the new commit message. --no-verify bypasses the pre-commit and commit-msg hooks.
-    can = !git add --all && git commit --all --amend  --no-verify --no-edit # adds untracked files, stages all changes, and replaces the previous commit, reusing the existing commit message. --no-verify bypasses the pre-commit and commit-msg hooks.
+    can = !git add --all && git commit --all --amend --no-edit # adds untracked files, stages all changes, and replaces the previous commit, reusing the existing commit message.
     cge = config --global --edit # opens ~/.gitconfig
     cgl = config --global --list # lists all the variables in ~/.gitconfig
     cm = commit -m
