--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -47,10 +47,9 @@
   "git.rebaseWhenSync": true,
   // https://docs.github.com/en/copilot/configuring-github-copilot/configuring-github-copilot-in-your-environment?tool=vscode
   "github.copilot.enable": {
-    "*": true,
-    "plaintext": true,
-    "markdown": true,
-    "scminput": true
+    "markdown": false,
+    "plaintext": false,
+    "yaml": false,
   },
   "html.format.preserveNewLines": false,
   "javascript.inlayHints.enumMemberValues.enabled": true,
