--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -83,14 +83,7 @@
   // https://dartcode.org/docs/recommended-settings/
   "[dart]": {
     "editor.codeActionsOnSave": {
-      "quickfix.insertSemicolon": true,
+      "quickfix.insertSemicolon": "explicit"
     },
-    "editor.rulers": [
-      80
-    ],
-    "editor.selectionHighlight": false,
-    "editor.suggestSelection": "first",
-    "editor.tabCompletion": "onlySnippets",
-    "editor.wordBasedSuggestions": false,
   }
 }
