--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,3 +1,4 @@
+// ~/Library/Application Support/Code/User/settings.json
 // Delete all comments when deploying, as they are not allowed in JSON.
 {
   "debug.console.historySuggestions": false,
