--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -43,8 +43,7 @@
     # --no-verify bypasses the pre-commit and commit-msg hooks.
     cam = commit --all --amend --no-verify -m
     # adds untracked files, stages all changes, and replaces the previous commit, reusing the existing commit message.
-    # --no-verify bypasses the pre-commit and commit-msg hooks.
-    can = !git add --all && git commit --all --amend --no-edit --no-verify
+    can = !git add --all && git commit --all --amend --no-edit
     cancan = !git can && git can
     cge = config --global --edit # opens ~/.gitconfig
     cgl = config --global --list # lists all the variables in ~/.gitconfig
