--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -84,5 +84,9 @@
         120
       ]
     }
-  }
+  },
+  // https://github.com/denoland/vscode_deno?tab=readme-ov-file#formatting
+  "[typescript]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  },  
 }
