Remove the trailing commas from settings.json

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -79,6 +79,8 @@
     "editor.codeActionsOnSave": {
       "quickfix.insertSemicolon": "always",
     },
-    "editor.rulers": [80],
-  },
+    "editor.rulers": [
+      80
+    ]
+  }
 }
