--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -57,7 +57,9 @@
   "javascript.updateImportsOnFileMove.enabled": "always",
   "search.globalFindClipboard": true,
   "search.quickOpen.includeHistory": false,
-  "search.smartCase": true,
+  // If smartCase is false, the search is always case-insensitive.
+  // If smartCase is true, the search is case-insensitive only if the search term is all lowercase.
+  // "search.smartCase": true,
   "security.workspace.trust.enabled": false,
   "typescript.inlayHints.enumMemberValues.enabled": true,
   "typescript.inlayHints.functionLikeReturnTypes.enabled": true,
