--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,3 +1,5 @@
+// Since the JSON specification does not support comments, the pseudo comments `//` in this JSON file should be removed.
+// 
 // ~/Library/Application Support/Code/User/settings.json
 {
   "dart.flutterGenerateLocalizationsOnSave": "allIfDirty",
